# ersilia-client

./: README.md  development.py  pyproject.toml  setup.py
ersilia_client/: __init__.py  app.py  client.py  inputs.py  outputs.py
